[package]
name = "dtls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.8.0", features = ["defmt-03"] }
rand_core = { version = "0.6.4", default-features = false }
p256-cortex-m4 = "0.1.0-alpha.6"
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless", "reduced-round"] }
defmt = "0.3.6"
generic-array = "1.0.0"
digest = { version = "0.10.7", default-features = false }
typenum = { version = "1.17.0", default-features = false, features = ["no_std"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
